FIDOCONFIG 1.9-current
Changes after FIDOCONFIG 1.4

1. MAJOR feature improvements:
   - merge s_filearea into s_area, use one structure and one areafix functions
     for all areas;

2. CONFIG changes:
   - new token grpDesc: group descriptions for -g groups in echoArea

3. IMPORTANT bugfixes:

4. KNOWN BUGS



FIDOCONFIG 1.4-stable
Changes after FIDOCONFIG 0.14

1. MAJOR feature improvements:
   - new parameters for bundlenamestyle: addrsCRC32 and addrsCRC32Always
   - area definition options -manual & -mandatory are different:
     '-mandatory' prevent unsubscribe, '-manual' disable subscribe;
   - areafixorigin & origin statements parsing change: remove round quotes;
     empty origin may be defined as "";
   - compare with a pattern by using =~ and !~ instead of == and !=
     in "if" expressions in the config;
   - fconf2binkd, fconf2tornado and fconf2na converters;
   - use TEMP, TMP or TMPDIR enviroment variables to point to directory for
     create temporary files, also use system-default temporary directory;
   - new MSGID generation algorithm

2. CONFIG changes:
   - new tokens for htick: annAddrFrom, annAddrTo, annFrom, annTo, annSubj,
     annExclude, annInclude, announceSpool, annAreatag, annFileRFrom,
     annFileOrigin, fileAreaCreatePerms, filefixFromName, FileFixEchoLimit;
   - new tokens for hpt: newAreaRefuseFile, redusedSeenBy, areaFixFromName,
     disablePID;
   - pause statement expanded to: Pause ON, Pause OFF, Pause FAREA, Pause EAREA;
   - new tokens: seqDir and seqOutrun; used for MSGID generation;
   - new tokens: AreafixReportsAttr and FilefixReportsAttr: set attributes for
     areafix & filefix reports/replies;
   - tokens areafixKillReports and filefixKillReports removed;
   - new token for link: PackAka.

3. IMPORTANT bugfixes:
   - fix line parsing if comment ends line.
   - AllowEmptyPktPwd parsing: now enable 'off' and all boolean values;
   - fix loglevels and screenloglevels parsing.

4. KNOWN BUGS