@@ -7,6 +7,7 @@ Changes after FIDOCONFIG 1.4
 
 2. CONFIG changes:
    - new token grpDesc: group descriptions for -g groups in echoArea
+   - new token recodeMsgBase for hpt/htick.
 
 3. IMPORTANT bugfixes:
 
